Update 1057 Stack (30 分).md

--- a/1057 Stack (30 分).md
+++ b/1057 Stack (30 分).md
@@ -58,7 +58,7 @@ Invalid
 Invalid
 ```
 
-### Code:
+### Code1:普通c++版
 
 ```c++
 #include <algorithm>
@@ -100,4 +100,73 @@ int main() {
     return 0;
 }
 ```
+### Code2:参考算法笔记，分治法
 
+```c++
+#include <iostream>
+#include <stack>
+using namespace std;
+
+const int maxn = 100010;
+const int sqrtN = 316; // int(sqrt(100010)),表示块内元素个数
+int block[sqrtN];      //记录每一块中存在的元素个数
+int table[maxn];       // hash数组，记录元素当前存在个数
+stack<int> st;
+
+void peekMedian(int k) {
+    int sum = 0, idx = 0; //当前累积存在的数的个数，块号
+    while (sum + block[idx] < k) {
+        sum += block[idx++]; //未达到k，则累加上当前块的元素个数
+    }
+    int num = idx * sqrtN; // idx号块的第一个数
+    while (sum + table[num] < k) {
+        sum += table[num++]; //继续累加，直到k
+    }
+    printf("%d\n", num);
+}
+
+void Push(int x) {
+    st.push(x);
+    block[x / sqrtN]++; // x所在块的元素个数+1
+    table[x]++;         // x个数+1
+}
+
+void Pop() {
+    int x = st.top();
+    st.pop();
+    block[x / sqrtN]--; // x所在块的元素个数-1
+    table[x]--;         // x个数-1
+    printf("%d\n", x);
+}
+
+int main() {
+    int x, q;
+    string opt;
+    scanf("%d", &q);
+    for (int i = 0; i < q; i++) {
+        cin >> opt;
+        if (opt[1] == 'u') {
+            scanf("%d", &x);
+            Push(x);
+        } else if (opt[1] == 'o') {
+            if (st.empty()) {
+                printf("Invalid\n");
+            } else {
+                Pop();
+            }
+        } else {
+            if (st.empty()) {
+                printf("Invalid\n");
+            } else {
+                int k = st.size();
+                if (st.size() % 2 == 1) //找到中间位置k
+                    k = (k + 1) / 2;
+                else
+                    k /= 2;
+                peekMedian(k);
+            }
+        }
+    }
+    return 0;
+}
+```
